--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-imagemin": "^4.0.2",
     "rimraf": "^3.0.2",
     "sass": "^1.29.0",
     "stylelint": "^13.7.2",
